# browser-actor-supervisor

./: .gitignore  README.md  crawl_results.json  last_output.txt  pyproject.toml  run.sh  temp_last_output.txt
src/crawler/: __init__.py  actor.py  browser.py  main.py  monitor.py  scheduler.py  stats.py  types.py
stats/: ANALYSIS.md  generate_stats.py
