[project]
name = "browser-actor-supervisor"
version = "0.1.0"
description = "MVP crawler with browser supervision using actor model"
requires-python = ">=3.14"
dependencies = [
    "playwright>=1.49.0",
    "psutil>=6.1.0",
    "numpy>=2.2.0",
    "matplotlib>=3.10.0",
]

[tool.basedpyright]
typeCheckingMode = "basic"
pythonVersion = "3.14"

[dependency-groups]
dev = [
    "basedpyright>=1.22.0",
]
